Adicionar recurso para recuperar e expor o histórico de matrículas de alunos
Introduzida a funcionalidade para buscar e expor o histórico de matrículas
concluídas de um aluno em várias camadas da aplicação.

- Adicionado o método `ObterMatriculasConcluidas` em `AlunoService` para buscar matrículas
concluídas.
- Atualizado `IAlunoRepository` e implementado `GetMatriculasConcluidaByAlunoIdAsync` em `AlunoRepository`.
- Adicionado `ObterHistoricoAlunoQuery` e seu manipulador para processar solicitações de histórico.
- Criado o DTO `HistoricoAlunoResponse` para representar o histórico de matrículas.
- Adicionado o endpoint `/historico` nas camadas API e BFF.
- Atualizado o `openapi.json` e o cliente SPA para suportar o novo endpoint.
